SLING-12836 Upgrade to JUnit5